add python3 packages

--- a/buster_clang_pipenv/Dockerfile
+++ b/buster_clang_pipenv/Dockerfile
@@ -13,10 +13,31 @@ LABEL maintainer="Tony Wuersch <tony.wuersch@gmail.com>" \
 
 ARG DEBIAN_FRONTEND=noninteractive
 RUN /usr/local/bin/clean-install \
+	cython3 \
+	pipenv \
 	python3-pip \
-	python3-setuptools
+	python3-setuptools \
+	python3-wheel \
+	python3-pytest \
+	python3-pytest-xdist \
+	python3-pytest-cython \
+	python3-mock \
+	python3-flake8 \
+	python3-flake8-docstrings \
+	python3-flake8-polyfill \
+	python3-certifi \
+	python3-requests \
+	python3-requests-file \
+	python3-requests-futures \
+	python3-requests-unixsocket \
+	python3-requests-mock \
+	python3-gssapi \
+	python3-kerberos \
+	python3-flask-ldapconn \
+	python3-django-oauth-toolkit \
+	python3-djangorestframework \
+	dh-python
 
 ENV HOME /home/me
 WORKDIR $HOME/app
 USER me
-RUN pip3 install --user flake8 pipenv cython
